# PureDraft

./: .env.development  .env.production  .gitignore  CODE_WIKI.md  Claude.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.puredraft_saves/: oo3alj_slot1_auto.md  u9en07_slot2_manual.md  u9en07_slot3_manual.md
.trae/documents/: acrylic_titlebar_plan.md  acrylic_toggle_setting_plan.md  cleanup_and_optimize_plan.md  code_block_language_label_plan.md  combined_implementation_plan.md  dark_mode_icon_color_plan.md  disable_acrylic_effect_plan.md  dual_theme_mode_plan.md  dynamic_island_and_scroll_fix_plan.md  fix_bug_and_theme_plan.md  fix_tasklist_and_md_icon_plan.md  fix_three_bugs_plan.md  font_and_scroll_fix_plan.md  font_icon_toolbar_scroll_fix_plan.md  global_acrylic_and_test_md_plan.md  hover_preview_split_ui_plan.md  image_and_scroll_fix_plan.md  md_editor_feature_enhancement_plan.md  outline_scroll_image_fix_plan.md  preview_bounce_autosave_sidebar_plan.md  recent_files_delete_plan.md  save_slots_plan.md  scroll_recent_theme_plan.md  spec_compliance_refactor.md  (+6 more)
backend/: Cargo.toml
backend/src/: main.rs
docs/: UI_STYLE_GUIDE.md
src/: App.svelte  app.css  app.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: events.json  file-system.json  window-control.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  window_ops.rs
src-tauri/src/models/: file.rs
src-tauri/src/services/: file.rs
src-tauri/src/utils/: file_type.rs
(+44 files in other folders)
