[package]
name = "puredraft-backend"
version = "0.1.0"
edition = "2021"
description = "PureDraft Backend API Service"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
